--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8"
         <title>santa ceia</title>
         </head>
+
+           <meta charset="UTF-8>
+           <title>NAYLU-TAPETES-DECORADOS</title>
+           <link rel="stylesheet" href="style.css">
+    </head>
         <body>
 
 
@@ -11,13 +16,14 @@
             <h1></strong>Descrição do Tapetes de FruFru</strong></h1>
 
 </p><em></em>Os tapetes Frufru são decorativos e geralmente feitos de tecido com babados ou acabamentos.
+
 </p>Usam bases que não escorregam para a proteção de todos e podem ser utilizados em mesas, móveis ou como elementos decorativos em diversos espaços.</p>
-Pode bater na máquina e centrifugar
-pode secar ao sol
-pode por alvejantes (porém não recomendo, pois diminui o tempo de uso.)
-não lavar junto com outros tapetes e não misturar com pano de chão
-não deixar de molho, não usar ferro de passar
-tapete antialérgico
-antiderrapante
-não pega bolinha (desde que siga as recomendações) 
+Pode bater na máquina e centrifugar;
+pode secar ao sol;
+pode por alvejantes (porém não recomendo, pois diminui o tempo de uso.);
+não lavar junto com outros tapetes e não misturar com pano de chão;
+não deixar de molho, não usar ferro de passar;
+tapete antialérgico;
+antiderrapante;
+não pega bolinha (desde que siga as recomendações); 
 não solta tinta.</p>
