--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-            <h1></strong>Descrição do Tapetes de FruFru</strong></h1>
+            <h1></strong>Tapetes de FruFru</strong></h1>
 
 </p><em></em>Os tapetes Frufru são decorativos e geralmente feitos de tecido com babados ou acabamentos.
 
