--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
+< !DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8"
-
-        </head>
+            </head>
            <meta charset="UTF-8>
            <title>NAYLU-TAPETES-DECORADOS</title>
            <link rel="stylesheet" href="style.css">
