--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
-            </head>
-           <meta charset="UTF-8>
-           <title>NAYLU-TAPETES-DECORADOS</title>
-           <link rel="stylesheet" href="style.css">
-    </head>
-        <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-
+</body>
+</html>
 
             <h1></strong>Tapetes de FruFru</strong></h1>
 
