--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </body>
 </html>
 
-            <h1></strong>Tapetes de FruFru</strong></h1>
-
+<h1><strong>Tapetes de FruFru</strong</h1>
 </p><em></em>Os tapetes Frufru são decorativos e geralmente feitos de tecido com babados ou acabamentos.
 
 </p>Usam bases que não escorregam para a proteção de todos e podem ser utilizados em mesas, móveis ou como elementos decorativos em diversos espaços.</p>
